--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ click==6.6
 Flask==0.11.1
 Flask-Bcrypt==0.7.1
 Flask-Login==0.3.2
+Flask-RESTful==0.3.5
 Flask-WTF==0.12
 itsdangerous==0.24
 Jinja2==2.8
