--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 bcrypt==3.1.0
 cffi==1.7.0
 click==6.6
+cycler==0.10.0
 Flask==0.11.1
 Flask-Bcrypt==0.7.1
 Flask-Login==0.3.2
@@ -9,7 +10,11 @@ Flask-WTF==0.12
 itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
+matplotlib==1.5.2
+mpld3==0.2
+numpy==1.11.1
 pycparser==2.14
+pyparsing==2.1.8
 requests==2.11.0
 six==1.10.0
 Werkzeug==0.11.10
