--- a/requirements.txt
+++ b/requirements.txt
@@ -2,20 +2,20 @@ bcrypt==3.1.0
 cffi==1.7.0
 click==6.6
 cycler==0.10.0
-Flask==0.12.3
+Flask>=1.0.0
 Flask-Bcrypt==0.7.1
 Flask-Login==0.3.2
 Flask-RESTful==0.3.5
 Flask-WTF==0.12
 itsdangerous==0.24
-Jinja2==2.8
+Jinja2>=2.10.1
 MarkupSafe==0.23
 matplotlib==1.5.2
 mpld3==0.2
 numpy==1.11.1
 pycparser==2.14
 pyparsing==2.1.8
-requests==2.11.0
+requests>=2.20.0
 six==1.10.0
-Werkzeug==0.11.10
+Werkzeug>=0.15.3
 WTForms==2.1
