--- a/eng/requirements.txt
+++ b/eng/requirements.txt
@@ -1,10 +1,10 @@
 aniso8601==1.1.0
 click==6.6
 cycler==0.10.0
-Flask==0.11.1
+Flask>=1.0.0
 Flask-RESTful==0.3.5
 itsdangerous==0.24
-Jinja2==2.8
+Jinja2==2.10.1
 MarkupSafe==0.23
 matplotlib==1.5.2
 mpld3==0.2
@@ -15,4 +15,4 @@ python-dateutil==2.5.3
 pytz==2016.6.1
 sip==4.18.1
 six==1.10.0
-Werkzeug==0.11.10
+Werkzeug==0.15.3
